# syncwatch

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240101_000001_create_users.rs  m20240101_000002_create_rooms.rs  m20240101_000003_create_videos.rs  m20240101_000004_create_messages.rs
backend/src/: config.rs  error.rs  main.rs
backend/src/entities/: message.rs  room.rs  user.rs  video.rs
backend/src/routes/: auth.rs  mod.rs  room.rs  stream.rs  ws.rs
backend/src/services/: download.rs  mod.rs  room_manager.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatRoom.tsx  Danmaku.tsx  DanmakuInput.tsx  DownloadProgress.tsx  RoomSettings.tsx  SkeletonLoader.tsx  ThemeToggle.tsx  UserList.tsx  VideoPlayer.tsx
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/hooks/: useVideoSync.ts  useWebSocket.ts
frontend/src/lib/: api.ts  ws.ts
frontend/src/pages/: Home.tsx  Room.tsx
frontend/src/stores/: room.ts  theme.ts  user.ts
nginx/: nginx.conf
